[project]
name = "ar-sampling"
version = "0.1.0"
description = "Simple sampling library for autoregressive models "
authors = [
    { name = "Ryu1845", email = "ryu@tpgjbo.xyz" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
